# Reg-file-creator

./: README.md  pyproject.toml  reg_creator.py  reg_exemple.reg  regcreator.py
regcreator/: c.py  cli.py  core.py  reading.py
tests/: test_core.py  test_reading.py
tests/data/: test_reading_01.json  test_reading_02.json  test_reading_03.json
