[tool.poetry]
name = "reg-file-creator"
version = "2.0.2"  # to keep in sync with c.py
description = "Python package to create context-menu entries in windows via .reg file."
authors = ["Liam Collod <lcollod@gmail.com>"]
readme = "README.md"
packages = [{include = "regcreator"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

